# cookiecutter-redsun

./: LICENSE  Makefile  README.rst  cookiecutter.json
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: console_script_setup.rst  prompts.rst  tutorial.rst
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
tests/: test_bake_project.py
{{cookiecutter.plugin_slug}}/: CONTRIBUTING.rst  Makefile  README.rst  pyproject.toml  requirements-dev.txt
{{cookiecutter.plugin_slug}}/docs/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.plugin_slug}}/src/{{cookiecutter.plugin_slug}}/: __init__.py
{{cookiecutter.plugin_slug}}/src/{{cookiecutter.plugin_slug}}/engine/{{cookiecutter._plugin_engine}}/: _model_detector.py  _model_motor.py
{{cookiecutter.project_slug}}/: CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/docs/: index.rst  installation.rst  make.bat  usage.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.plugin_slug}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.project_slug}}.py
